--- a/index.html
+++ b/index.html
@@ -107,11 +107,6 @@
 
                         <div class="home__data">
                             <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Frima</span><br> Web Developer</h1>
-                            <!-- <h3 class="home__subtitle">Web develover</h3>
-                            <p class="home__description">I am a fresh graduate currently. 
-                                I would like to utilize my skill and experience as well as my passion for a web developer. 
-                                I would like to work with other professionals to improve my skill as a web developer which will allow me to 
-                                further contribute in the field of a web developer.</p> -->
                             <a href="#contact" class="button button--flex button--small mt_2">
                                 Contact Me <i class="uil uil-message button__icon"></i>
                             </a>
@@ -179,7 +174,6 @@
                                     <div class="skills__titles">
                                         <h3 class="skills__name">HTML</h3>
                                         <i class="fa-brands fa-html5 skills__icon"></i>
-                                        <!-- <span class="skills__number">90%</span> -->
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__html"></span>
@@ -189,7 +183,6 @@
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Bootstrap</h3>
                                         <i class="fa-brands fa-bootstrap skills__icon"></i>
-                                        <!-- <span class="skills__number">80%</span> -->
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__css"></span>
@@ -199,7 +192,6 @@
                                     <div class="skills__titles">
                                         <h3 class="skills__name">JavaScript</h3>
                                         <i class="fa-brands fa-js skills__icon"></i>
-                                        <!-- <span class="skills__number">60%</span> -->
                                     </div>
                                         <div class="skills__bar">
                                         <span class="skills__percentage skills__js"></span>
@@ -209,7 +201,6 @@
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Vue Js</h3>
                                         <i class="fa-brands fa-vuejs skills__icon"></i>
-                                        <!-- <span class="skills__number">50%</span> -->
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__vue"></span>
@@ -238,7 +229,6 @@
                                     <div class="skills__titles">
                                         <h3 class="skills__name">PHP</h3>
                                         <i class="fa-brands fa-php skills__icon"></i>
-                                        <!-- <span class="skills__number">80%</span> -->
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__php"></span>
@@ -248,7 +238,6 @@
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Laravel</h3>
                                         <i class="fa-brands fa-laravel skills__icon"></i>
-                                        <!-- <span class="skills__number">70%</span> -->
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__laravel"></span>
@@ -258,7 +247,6 @@
                                     <div class="skills__titles">
                                         <h3 class="skills__name">MySql</h3>
                                         <i class="fa-solid fa-database skills__icon"></i>
-                                        <!-- <span class="skills__number">60%</span> -->
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__mysql"></span>
@@ -285,7 +273,6 @@
                                             </svg>
                                         </div>
                                         <!-- <i class="fa-solid fa-code skills__icon"></i> -->
-                                        <!-- <span class="skills__number">50%</span> -->
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__ci"></span>
@@ -348,7 +335,7 @@
 
                                 <div>
                                     <h3 class="qualification__title">Computer and Network Engineering</h3>
-                                    <span class="qualification__subtitle">Tangerang - SMK Angaksa 2</span>
+                                    <span class="qualification__subtitle">Tangerang - SMK Angkasa 2</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2013 - 2016
@@ -369,7 +356,6 @@
 
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
                             </div>
                         </div>
@@ -400,7 +386,6 @@
 
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
 
                                 <div>
@@ -434,10 +419,6 @@
                                 <p class="portfolio__description">
                                     Final Paper or Thesis project.
                                 </p>
-                                <!-- <a href="" class="button button--flex button--small portfolio__button">
-                                    Demo 
-                                    <i class="uil uil-arrow-right button__icon"></i>
-                                </a> -->
                             </div>
                         </div>
 
@@ -450,10 +431,6 @@
                                 <p class="portfolio__description">
                                     Personal project.
                                 </p>
-                                <!-- <a href="" class="button button--flex button--small portfolio__button">
-                                    Demo 
-                                    <i class="uil uil-arrow-right button__icon"></i>
-                                </a> -->
                             </div>
                         </div>
                         <!--==================== PORTFOLIO 3 ====================-->
@@ -465,9 +442,6 @@
                                 <p class="portfolio__description">
                                     Personal Project.
                                 </p>
-                                <!-- <a href="" class="button button--flex button--small portfolio__button">
-                                    Demo 
-                                    <i class="uil uil-arrow-right button__icon"></i>
                                 </a> -->
                             </div>
                         </div>
@@ -516,7 +490,7 @@
 
                             <div>
                                 <h3 class="contact_title">Location</h3>
-                                <span class="contact__subtitle">Jl. Putus raya E8/11 VTE </span>
+                                <span class="contact__subtitle">Jl. Pinus raya E8/11 VTE </span>
                             </div>
                         </div>
                     </div>
@@ -533,10 +507,6 @@
                                 <input type="email" class="contact__input" disabled>
                             </div>
                         </div>
-                        <!-- <div class="contact__content">
-                            <label for="" class="contact__label">Project</label>
-                            <input type="text" class="contact__input" disabled>
-                        </div> -->
                         <div class="contact__content">
                             <label for="" class="contact__label">Message</label>
                             <textarea type="email" cols="0" rows="7" class="contact__input" disabled></textarea>
