--- a/index.html
+++ b/index.html
@@ -574,6 +574,8 @@
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZDNLEQSDJR"></script>
