--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             <div class="qualification__data">
                                 <div>
                                     <h3 class="qualification__title">Helper Cabin Technician</h3>
-                                    <span class="qualification__subtitle">Kopkar GMF Aeroasia Sejahtera (Placment in GMF Aeroasia)</span>
+                                    <span class="qualification__subtitle">Kopkar GMF Aeroasia Sejahtera (Placement in GMF Aeroasia)</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2017 - 2018
@@ -390,7 +390,7 @@
 
                                 <div>
                                     <h3 class="qualification__title">Aircraft Helper Technician</h3>
-                                    <span class="qualification__subtitle">Dutagaruda Piranti Prima (Placment in GMF Aeroasia)</span>
+                                    <span class="qualification__subtitle">Dutagaruda Piranti Prima (Placement in GMF Aeroasia)</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2018 - 2020
@@ -582,7 +582,7 @@
                     if (this.hash !== "") {
                         event.preventDefault();
                         
-                        var hash = this.hash;
+                        let hash = this.hash;
                 
                         $('html, body').animate({
                         scrollTop: $(hash).offset().top
