--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="web, web portfolio, portfolio, frima, frima satria, web developer, frontend, backend, programming, programmer, technology">
+        <meta name="description" content="Responsive portfolio website">
 
         <link rel="icon" type="image/png" href="assets/img/fskn.ico"/>
 
