--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="web, web portfolio, portfolio, frima, frima satria, web developer, frontend, backend, programming, programmer, technology">
+        <meta name="keywords" content="web, web portfolio, portfolio, frima, frima satria, web developer, frontend, backend, programming, programmer, technology, github">
         <meta name="description" content="Responsive portfolio website">
 
         <link rel="icon" type="image/png" href="assets/img/fskn.ico"/>
@@ -24,7 +24,7 @@
 
         <title>Frima Skn.</title>
     </head>
-    <body class="dark-theme" oncopy="return false" oncut="return false" oncontextmenu="return false;">
+    <body class="dark-theme" >
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
@@ -90,6 +90,10 @@
 
                             <a href="https://dribbble.com/frima" target="_blank" class="home__social-icon">
                                 <i class="uil uil-dribbble"></i>
+                                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 25">
+                                    <path fill="#39E09B" d="M11.2.688c-.5-.9-1.8-.9-2.3 0l-8.6 15.6c-.399.8.2 1.7 1.101 1.7h5.8v5.9c0 .6.5 1.1 1.1 1.1h3.4c.6 0 1.1-.5 1.1-1.1v-5.9h-1.6c-.7 0-1.2-.5-1.3-1.1 0-.2 0-.4.1-.601l4.8-8.7L11.2.688z"></path>
+                                    <path fill="#28BF7B" d="M18.8.688c.5-.9 1.8-.9 2.3 0l8.601 15.6c.399.8-.2 1.7-1.101 1.7h-5.7v5.9c0 .6-.5 1.1-1.101 1.1h-3.6c-.601 0-1.101-.5-1.101-1.1v-5.9H18.7c.7 0 1.2-.5 1.3-1.1 0-.2 0-.4-.1-.601l-4.801-8.7L18.8.688z"></path>
+                                </svg> -->
                             </a>
 
                             <a href="https://github.com/FrimaSkn" target="_blank" class="home__social-icon">
@@ -110,7 +114,7 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Frima</span><br> Web Developer</h1>
+                            <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Frima</span><br> Web Programmer <br> at <span class="home__title-color">DesignCub3</span></h1>
                             <a href="#contact" class="button button--flex button--small mt_2">
                                 Contact Me <i class="uil uil-message button__icon"></i>
                             </a>
@@ -156,7 +160,7 @@
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills">
                 <h2 class="section__title">Skill</h2>
-                <span class="section__subtitle">My techical level</span>
+                <span class="section__subtitle">My techical skill</span>
 
                 <div class="skills__container container grid">
                     <div>
@@ -532,7 +536,7 @@
                 <div class="footer__container container grid">
                     <div>
                         <h1 class="footer__title">Frima Skn.</h1>
-                        <span class="footer__subtitle">Web developer</span>
+                        <span class="footer__subtitle">Web Programmer</span>
                     </div>
 
                     <ul class="footer__links">
