--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <title>Frima Skn.</title>
     </head>
-    <body class="dark-theme" >
+    <body class="dark-theme" oncopy="return false" oncut="return false" oncontextmenu="return false;">
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
