--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                     <div class="about__data">
                         <h2 class="about__name">My name is,<br><span class="about__name-color">Frima Satria Kharisma N</span></h2>
-                        <p class="about_description mt_1">I recently graduated from Raharja University with a bachelor's degree in informatics engineering. 
+                        <p class="about_description mt_1">I graduated from Raharja University with a bachelor's degree in informatics engineering. 
                             I'd like to put my knowledge and experience, as well as my enthusiasm for technology, to good use. 
                             I'd like to collaborate with other professionals to improve my skills, 
                             allowing me to make a greater contribution to the field of technology.</p>
