--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="about__info"> </div>
 
                         <div class="about__buttons">
-                            <a download="" href="assets/pdf/Frima_CV.pdf" class="button button--flex button--small">
+                            <a download="" href="assets/pdf/frima-cv-2023.pdf" class="button button--flex button--small">
                                 Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -390,10 +390,9 @@
                             <!--==================== QUALIFICATION 2 ====================-->
                             <div class="qualification__data">
                                 <div></div>
-                                
-
                                 <div>
                                     <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
                                 </div>
 
                                 <div>
@@ -403,6 +402,22 @@
                                         <i class="uil uil-calendar-alt"></i>
                                         2018 - 2020
                                     </div>
+                                </div>
+                            </div>
+
+                            <!--==================== QUALIFICATION 3 ====================-->
+                            <div class="qualification__data">
+                                <div>
+                                    <h3 class="qualification__title">Full Stack Web Develover</h3>
+                                    <span class="qualification__subtitle">PT. Desain Tiga Selaras (DesignCub3)</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        20022 - now
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <span class="qualification__rounder"></span>
                                 </div>
                             </div>
 
@@ -418,6 +433,48 @@
 
                 <div class="portfolio__container container swiper-container">
                     <div class="swiper-wrapper">
+                        <!--==================== PORTFOLIO 1 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/gaulcreation.JPG" alt="" class="portfolio__img">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Good Day Gaul Creation 2023</h3>
+                                <p class="portfolio__description">
+                                </p>
+                                <div class="flex-center">
+                                    <a class="button" href="https://gaulcreation.hidupbanyakrasa.com/2023/" target="_blank">View</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--==================== PORTFOLIO 1 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/caffino.JPG" alt="" class="portfolio__img">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Caffino</h3>
+                                <p class="portfolio__description">
+                                </p>
+                                <div class="flex-center">
+                                    <a class="button" href="https://caffino.id" target="_blank">View</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--==================== PORTFOLIO 1 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/5dyas.JPG" alt="" class="portfolio__img">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">5Days</h3>
+                                <p class="portfolio__description">
+                                </p>
+                                <div class="flex-center">
+                                    <a class="button" href="https://5days.id" target="_blank">View</a> 
+                                </div>
+                            </div>
+                        </div>
+
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portfolio__content grid swiper-slide">
                             <img src="assets/img/dfs.jpg" alt="" class="portfolio__img">
