--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                                     <span class="qualification__subtitle">PT. Desain Tiga Selaras (DesignCub3)</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        20022 - now
+                                        2022 - Present
                                     </div>
                                 </div>
 
